--- a/style.css
+++ b/style.css
@@ -1,34 +1,45 @@
-.split{
-    display: table;
-    width: 100%;    
-}
-.split-item{
-    display: table-cell;
-    padding: 80px;
-    width: 50%;
-}
-.split-left{
-    background: #000;
-    color: #fff;
-    position: relative;
-}
-.split-left__inner{
-    height: 100%;
-    position: fixed;
-    width: 50%;
-}
-.split-right__inner{
-    height: 8000px;
-}
 .yk-bi-icon{
     font-size: 2rem;
     color: gray;
 }
-.yk-bi-text{
+.yk-bi-icon-big{
+    font-size: 5rem;
+    color: gray;
+}
+.yk-thumbnail-img{
+    width: 200;
+}
+.yk-center {
+    text-align: center;
+}
+.yk-left {
+    text-align: left;
+}
+.yk-text-title{
+    font-size: 2rem;
+    color: black;
+}
+.yk-text-normal{
+    font-size: 1rem;
+    color: black;
+}
+.yk-text-description{
+    font-size: 0.5rem;
+    color: gray;
+}
+.yk-text-icon{
     font-size: 1.5rem;
     color: gray;
     display: inline-block;
 }
-.yk-thumbnail-img{
-    width: 200;
+.yk-box-focus{
+    width: 80%;
+    height: 250px;
+    margin:5px; 
+    padding:20px;
+    background-color: #f5f5f5;
+    border: 2px solid silver;
+}
+input[type="file"] {
+    display: none;
 }
