--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@
 .yk-left {
     text-align: left;
 }
+.yk-right {
+    text-align: right;
+}
+.yk-bottom {
+    vertical-align: baseline;
+}
 .yk-text-title{
     font-size: 2rem;
     color: black;
@@ -37,7 +43,49 @@
     height: 250px;
     margin:5px; 
     padding:20px;
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
+    /* border: 2px solid silver; */
+}
+.yk-box-separate{
+    width: 100%;
+    height: 100px;
+    margin:5px; 
+    padding:20px;
+    border: 2px solid silver;
+}
+.yk-box-separate-small{
+    width: 100%;
+    height: 50px;
+    margin:5px; 
+    padding:20px;
+    border: 2px solid silver;
+}
+.yk-box-caption{
+    width: 100%;
+    border: none;
+}
+.yk-box-space{
+    width: 100%;
+    height: 30px;
+    border: none;
+}
+.yk-box-thumbnail{
+    width: 200px;
+    height: 120px;
+    border: 2px solid silver;
+}
+.yk-img-thumbnail{
+    width: 200px;
+    height: 120px;
+}
+.yk-input-text{ 
+    width: 100%;
+    height: 50px;
+    border: 2px solid silver;
+}
+.yk-input-text-big{ 
+    width: 100%;
+    height: 100px;
     border: 2px solid silver;
 }
 input[type="file"] {
